[package]
name = "must_future"
version = "0.1.2"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2018"
description = "A wrapper future marked must_use - mainly to wrap BoxFutures"
keywords = ["asynchronous", "future", "must_use"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/must_future"
repository = "https://github.com/neonphog/must_future"

[dependencies]
futures = "0.3"
pin-utils = "0.1.0-alpha.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
